--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       border: 4px solid purple;
       border-radius: 15px;
       box-shadow: 0 0 10px purple;
-      background-color: #96DED1;
+      background-color: #68C7E6;
     }
 
     h1 {
