--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="manifest" href="manifest.json">
+<link rel="icon" href="IMG_0379.jpeg" type="image/jpeg">
+<meta name="theme-color" content="#68C7E6">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rabbit Show Points Calculator</title>
