--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
   <div id="summary"></div>
   <div id="entryList"></div>
 
+  <button onclick="downloadCSV()">📄 Download CSV</button>
+
   <script>
     let showPrinted = false;
     let totalPoints = 0;
@@ -233,6 +235,29 @@
     function saveToLocal() {
       localStorage.setItem('rabbitEntries', JSON.stringify(entries));
       localStorage.setItem('rabbitTotalPoints', totalPoints);
+    }
+
+    function downloadCSV() {
+      const filteredEntries = entries.filter(entry => entry !== null);
+      if (filteredEntries.length === 0) {
+        alert("No entries to export.");
+        return;
+      }
+
+      let csvContent = "data:text/csv;charset=utf-8,";
+      csvContent += "Rabbit Name,Class Size,Placing,Points\n";
+
+      filteredEntries.forEach(entry => {
+        csvContent += `${entry.rabbitName},${entry.entry},${entry.placing},${entry.points}\n`;
+      });
+
+      const encodedUri = encodeURI(csvContent);
+      const link = document.createElement("a");
+      link.setAttribute("href", encodedUri);
+      link.setAttribute("download", "rabbit_show_points.csv");
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
     }
 
     window.onload = function () {
