--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
     <option value="5">5th Place</option>
     <option value="BOB">Best of Breed (BOB)</option>
     <option value="BOS">Best Opposite Sex (BOS)</option>
+    <option value="BIS">Best In Show (BIS)</option>
+    <option value="RIS">Reserve In Show (RIS)</option>
+    
   </select>
 
   <button onclick="calculatePoints()">Calculate Points</button>
