--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       font-weight: bold;
       padding: 14px;
       margin-top: 25px;
-      background-color: #000;
+      background-color: purple;
       color: #fff;
       border: none;
       border-radius: 8px;
