--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       border: 2px solid #555;
       border-radius: 8px;
       box-sizing: border-box;
+      color: #000;
     }
 
     button {
