--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
   <label for="variety">Variety:</label>
   <select id="variety" name="variety">
+    <option value="" disabled selected>Select Variety</option>
     <option value="Black">Black</option>
     <option value="Blue">Blue</option>
     <option value="Broken">Broken</option>
@@ -143,6 +144,7 @@
 
   <label for="placing">Placing:</label>
   <select id="placing" name="placing">
+     <option value="" disabled selected>Select Placing</option>
     <option value="1">1st Place</option>
     <option value="2">2nd Place</option>
     <option value="3">3rd Place</option>
