--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
          Judge: ${lastJudgeName}`;
     }
   };
+window.generatePDF = generatePDF;			
 </script>
 <!-- jsPDF CDN -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
