--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ async function generatePDF() {
 
   // Load watermark image (local)
   const watermarkImg = new Image();
-  watermarkImg.src = "A519F0CE-1F72-49BD-83D9-5248325DA319.jpeg"; // Rename if needed to match GitHub file
+  watermarkImg.src = "IMG_0379.jpeg"; // Rename if needed to match GitHub file
 
   await new Promise(resolve => {
     watermarkImg.onload = resolve;
