--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="manifest" href="manifest.json">
   <link rel="icon" href="IMG_0379.jpeg" type="image/jpeg">
   <title>Rabbit Show Points Calculator</title>
-  <marquee>🐇         🐇         🐇..</marquee>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
@@ -116,7 +115,7 @@
 </head>
 <body>
     <div class="title-container">
-    <h1>🐇 Rabbit Show Points Calculator</h1>
+    <h1><marquee>🐇</marquee></h1> Rabbit Show Points Calculator</h1>
   </div>
 
   <div class="row">
