--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </head>
 <body>
     <div class="title-container">
-    <h1><marquee>🐇</marquee></h1> Rabbit Show Points Calculator</h1>
+    </h2><B>Rabbit Show Points Calculator</B></h2><marquee>🐇</marquee>
   </div>
 
   <div class="row">
