--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </head>
 <body>
     <div class="title-container">
-    </h2><B>Rabbit Show Points Calculator</B></h2><marquee>🐇</marquee>
+    </h2><B>Rabbit Show Points Calculator</B></h2><marquee><font size="5">🐇</font></marquee>
   </div>
 
   <div class="row">
