--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </head>
 <body>
     <div class="title-container">
-    </h2><B>Rabbit Show Points Calculator</B></h2><marquee><font size="7">🐇</font></marquee>
+    <h1><B><font size="7">Rabbit Show Points Calculator</font></B></h1><marquee><font size="7">🐇</font></marquee>
   </div>
 
   <div class="row">
