--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </head>
 <body>
     <div class="title-container">
-    <h1><B><font size="5">APRC Points Calculator</font></B></h1><marquee><font size="7">🐇.</font></marquee>
+    <h1><B><font size="5">APRC Points Calculator</font></B></h1><marquee><font size="7">🐇.test</font></marquee>
   </div>
 
   <div class="row">
