--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <h1><B><font size="5">APRC Points Calculator</font></B></h1><marquee><font size="7">🐇.test</font></marquee>
   </div>
 <div class="bunny-wrapper">
-  <img class="bunny" src="IMG_4020.gif" alt="Hopping Bunny">
+  <img class="bunny" src="https://tenor.com/7Wwc.gif" alt="Hopping Bunny">
 </div>
   <div class="row">
     <div class="half">
