--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   position: absolute;
   top: 20px;
   left: 100%;
-  animation: hopStep 4s steps(1, end) infinite;
+  animation: hopStep 20s steps(1, end) infinite;
   z-index: 1000;
 }
 
@@ -140,7 +140,7 @@
 </head>
 <body>
     <div class="title-container">
-    <h1><B><font size="5">APRC Points Calculator</font></B></h1><marquee><font size="7">🐇.test</font></marquee>
+    <h1><B><font size="5">APRC Points Calculator</font></B></h1>
   </div>
 <div class="bunny-wrapper">
   <img class="bunny" src="https://media.tenor.com/GDBc_2NpXyYAAAAj/bunny-jump.gif" alt="Hopping Bunny">
