--- a/index.html
+++ b/index.html
@@ -124,17 +124,14 @@
 }
 
 @keyframes hopStep {
-  0%   { left: 90%; }
-  10%  { left: 90%; }
-  20%  { left: 80%; }
-  20%  { left: 80%; }
-  30%  { left: 70%; }
-  50%  { left: 70%; }
-  60%  { left: 60%; }
-  70%  { left: 60%; }
-  70%  { left: 50%; }
-  80%  { left: 50%; }
-  100% { left: -120px; }
+  0%   { left: 90%; }   /* pause on ground */
+  20%  { left: 90%; }   /* still paused */
+  
+  30%  { left: 80%; }   /* start hop */
+  60%  { left: 60%; }   /* finish hop */
+
+  70%  { left: 60%; }   /* pause on ground */
+  100% { left: 60%; }   /* still paused */
 }
   </style>
 </head>
