--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <h1><B><font size="5">APRC Points Calculator</font></B></h1>
   </div>
 <div class="bunny-wrapper">
-  <img class="bunny" src="https://media.tenor.com/GDBc_2NpXyYAAAAj/bunny-jump.gif" alt="Hopping Bunny">
+  <img class="bunny" src="https://i.gifer.com/4xjK.gif" alt="Hopping Bunny">
 </div>
   <div class="row">
     <div class="half">
