--- a/index.html
+++ b/index.html
@@ -124,13 +124,18 @@
 }
 
 @keyframes hopStep {
-  0%   { left: 90%; }   /* landed */
-  25%  { left: 90%; }   /* still landed */
-
-  50%  { left: 70%; }   /* in the air, moving */
-  75%  { left: 50%; }   /* still in the air, moving */
-
-  100% { left: 50%; }   /* landed again */
+  0%   { left: 100%;}   
+  10%  { left: 90%; }   
+  20%  { left: 80%; }   
+  30%  { left: 70%; }   
+  40%  { left: 60%; }  
+  50%  { left: 50%; }
+  60%  { left: 40%; }   
+  70%  { left: 30%; }   
+  80%  { left: 20%; }   
+  90%  { left: 10%; }   
+  100% { left: 120px;}  
+  
 }
   </style>
 </head>
