--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 </head>
 <body>
     <div class="title-container">
+      <img class="bunny" src="https://i.gifer.com/4xjK.gif" alt="Hopping Bunny">
     <h1><B><font size="5">APRC Points Calculator</font></B></h1>
   </div>
 <div class="bunny-wrapper">
