--- a/index.html
+++ b/index.html
@@ -137,11 +137,18 @@
   100% { left: 120px;}  
   
 }
+    .left-bunny {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 120px; /* or whatever size fits */
+  z-index: 10;
+}
   </style>
 </head>
 <body>
     <div class="title-container">
-      <img class="bunny" src="https://i.gifer.com/4xjK.gif" alt="Hopping Bunny">
+      <img class="left-bunny" src="https://i.gifer.com/4xjK.gif" alt="Hopping Bunny">
     <h1><B><font size="5">APRC Points Calculator</font></B></h1>
   </div>
 <div class="bunny-wrapper">
